implement new endponts to update round of 16, quaterfinals and so on
