# go/docs/swagger.json
@@ -157,6 +157,138 @@
                 }
             }
         },
+        "/updateMatchesFinal/:id": {
+            "put": {
+                "tags": [
+                    "Match"
+                ],
+                "summary": "Update the semifinals",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Game Id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
+        "/updateMatchesQuaterfinals/:id": {
+            "put": {
+                "tags": [
+                    "Match"
+                ],
+                "summary": "Update the quaterfinal matches",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Game Id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
+        "/updateMatchesRoundOfSixteen/:id": {
+            "put": {
+                "tags": [
+                    "Match"
+                ],
+                "summary": "Update the round of 16 matches",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Game Id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
+        "/updateMatchesSemifinals/:id": {
+            "put": {
+                "tags": [
+                    "Match"
+                ],
+                "summary": "Update the semifinals",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Game Id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
         "/updateTeams": {
             "put": {
                 "tags": [
@@ -203,6 +335,9 @@
                 "created_at": {
                     "type": "string"
                 },
+                "game_time": {
+                    "$ref": "#/definitions/time.Duration"
+                },
                 "id": {
                     "type": "integer"
                 },
@@ -211,6 +346,21 @@
                 },
                 "mode": {
                     "type": "integer"
+                },
+                "referee": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/github_com_gladom_beerpong_pkg_models.Referee"
+                    }
+                },
+                "start_time": {
+                    "type": "string"
+                },
+                "teams": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/github_com_gladom_beerpong_pkg_models.Team"
+                    }
                 },
                 "updated_at": {
                     "type": "string"
@@ -223,11 +373,25 @@
                 "game": {
                     "$ref": "#/definitions/github_com_gladom_beerpong_pkg_models.Game"
                 },
+                "groups": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/github_com_gladom_beerpong_pkg_models.Group"
+                    }
+                },
                 "matches": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/github_com_gladom_beerpong_pkg_models.Match"
                     }
+                }
+            }
+        },
+        "github_com_gladom_beerpong_pkg_models.Group": {
+            "type": "object",
+            "properties": {
+                "group_name": {
+                    "type": "string"
                 },
                 "teams": {
                     "type": "array",
@@ -246,6 +410,9 @@
                 "created_at": {
                     "type": "string"
                 },
+                "end_time": {
+                    "type": "string"
+                },
                 "game_id": {
                     "type": "integer"
                 },
@@ -255,11 +422,20 @@
                 "home_team": {
                     "type": "string"
                 },
+                "match_id": {
+                    "type": "integer"
+                },
                 "points_away": {
                     "type": "integer"
                 },
                 "points_home": {
                     "type": "integer"
+                },
+                "referee": {
+                    "type": "string"
+                },
+                "start_time": {
+                    "type": "string"
                 },
                 "type": {
                     "type": "string"
@@ -285,12 +461,23 @@
             "properties": {
                 "game": {
                     "$ref": "#/definitions/github_com_gladom_beerpong_pkg_models.Game"
+                }
+            }
+        },
+        "github_com_gladom_beerpong_pkg_models.Referee": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string"
                 },
-                "teams": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/github_com_gladom_beerpong_pkg_models.Team"
-                    }
+                "game_id": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
                 }
             }
         },
@@ -299,6 +486,15 @@
             "properties": {
                 "created_at": {
                     "type": "string"
+                },
+                "cup_difference": {
+                    "type": "integer"
+                },
+                "cups_get": {
+                    "type": "integer"
+                },
+                "cups_hit": {
+                    "type": "integer"
                 },
                 "game_id": {
                     "type": "integer"
@@ -320,16 +516,70 @@
                 }
             }
         },
+        "github_com_gladom_beerpong_pkg_models.TeamUpdate": {
+            "type": "object",
+            "properties": {
+                "cups_got": {
+                    "type": "integer"
+                },
+                "cups_hitted": {
+                    "type": "integer"
+                },
+                "game_id": {
+                    "type": "integer"
+                },
+                "group_name": {
+                    "type": "string"
+                },
+                "points_to_add": {
+                    "type": "integer"
+                },
+                "team_name": {
+                    "type": "string"
+                }
+            }
+        },
         "github_com_gladom_beerpong_pkg_models.TeamUpdateRequest": {
             "type": "object",
             "properties": {
                 "teams": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/github_com_gladom_beerpong_pkg_models.Team"
+                        "$ref": "#/definitions/github_com_gladom_beerpong_pkg_models.TeamUpdate"
                     }
                 }
             }
+        },
+        "time.Duration": {
+            "type": "integer",
+            "enum": [
+                -9223372036854775808,
+                9223372036854775807,
+                1,
+                1000,
+                1000000,
+                1000000000,
+                60000000000,
+                3600000000000,
+                1,
+                1000,
+                1000000,
+                1000000000
+            ],
+            "x-enum-varnames": [
+                "minDuration",
+                "maxDuration",
+                "Nanosecond",
+                "Microsecond",
+                "Millisecond",
+                "Second",
+                "Minute",
+                "Hour",
+                "Nanosecond",
+                "Microsecond",
+                "Millisecond",
+                "Second"
+            ]
         }
     }
 }
